[package]
name = "fire_swimmer"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.14"
bevy_rapier2d = "0.27"
rand = {version = "0.8", features = ["small_rng"] }